...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AllowPermissionsTutorialFragment"
    android:background="@color/yellow_500">

    <ImageView
        android:id="@+id/btnSwordNext3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:contentDescription="@string/btn_sword_next_title"
        android:focusable="true"
...
