...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity"
    android:background="@color/yellow_500"
    android:id="@+id/home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeBackgroundGroup"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_marginTop="100dp"
...
